# LinuxDev2020

./: helloworld.c
04_Multifile/: Makefile  fun.c  outlib.h  prog.c
05_Environmental/: Makefile.am  Window.c  configure.ac  pcredemo.c
06_Debugging/: double-free.c
07_DebuggingTracing/: Makefile  fakerm.c
08_TestingCoverage/src/libbuf/: Makefile.am  configure.ac
08_TestingCoverage/src/libbuf/src/: Makefile.am  buf.h  libbuf.c
08_TestingCoverage/src/libbuf/tests/: Makefile.am  test1.c  test2.c  test3.c  test4.c  test5.c
09_I18nL10n/: guess.c  guess.po
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess.c  guess.md  guess.po  toRom.h
11_Toolkits/: Makefile.am  configure.ac  hash_tables.c
12_ScriptingText/: Doxyfile.in  Makefile.am  configure.ac  guess.c  guess.po  toRom.h
13_PatchInstall/: Makefile.am  configure.ac  guess.c
